Testing EJS pathing complete

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+  <link href="/styles/base.css" rel="stylesheet" type="text/css">
+</head>
+
 
 <body>
-  <header>\
-    <h1>This is the start of something beautiful.</h1>
+  <header>
+    <h1>CSS Sucks.</h1>
   </header>
   <main></main>
   <footer></footer>
