Added CSS styling and EJS templating.  User Story 5

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,4 +1,6 @@
-h1 {
-  border: 1px solid purple;
-  background-color: red;
+@import "/styles/reset.css";
+@import "/styles/layout.css";
+@import "/styles/modules.css";
+body{
+  background-color: gray;
 }
