--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -3,27 +3,29 @@
 
 <head>
   <title>Search for Words on Screen.</title>
-  <link href="styles/base.css" rel="stylesheet">
+  <link href="/styles/base.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   <header>
-
+    <h1>Best Books!</h1>
   </header>
   <main>
-    <h1>Expand Your Mind with a Book!</h1>
+    <h2 class="search-title">Search By Title or Author</h2>
+
     <form action="/searches" method="post">
-      <input type="text" name="search" placeholder="Enter Author or Title" required>
-      <fieldset>
-        <label for="title">Title</label>
-        <input type="radio" name="search" value="title" required>
+      <input class="txt-search" type="text" name="search" placeholder="Enter Author or Title" required>
+      <fieldset class="search-form">
+        <label class="lab-but" for="title">Title</label>
+        <input class="lab-but" type="radio" name="search" value="title" required>
       </fieldset>
-      <fieldset>
-        <label for="author">Author</label>
-        <input type="radio" name="search" value="author" required>
+      <fieldset class="search-form">
+        <label class="lab-but" for="author">Author</label>
+        <input class="lab-but" type="radio" name="search" value="author" required>
       </fieldset>
-      <button type="submit">Search Google's Books</button>
+      <button class="google-button" type="submit">Search the Google Books API</button>
     </form>
+
   </main>
   <footer></footer>
 </body>
