--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,9 +8,20 @@
 
 <body>
   <header>
-    <h1>CSS Sucks.</h1>
+    <h1>Best Books!</h1>
   </header>
-  <main></main>
+  <main>
+    <h2 class="search-title">Welcome to Best Book Search and Bookcase!</h2>
+
+    <form action="/searches/new" method="get">
+      <button class="start-button" type="submit">
+        Click to Get Started!
+      </button>
+    </form>
+
+
+
+  </main>
   <footer></footer>
 </body>
 
