--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-  <header>
-    <h1>Best Books!</h1>
-  </header>
+<%- include('../header.ejs') %>
   <main>
     <h2 class="search-title">Search By Title or Author</h2>
 
