--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -7,23 +7,27 @@
 </head>
 
 <body>
-  <header>
+  <%- include('../header.ejs') %>
+  <!-- <header>
     <h1>Best Books!</h1>
-  </header>
+  </header> -->
   <main>
     <section>
       <h2 class="search-title">Search Results</h2>
 
       <section>
+        <p><%= searchResults[0] %></p>
         <% for(let i=0; i < searchResults.length; i++) { %>
-        <div class="disp-container">
+          <%- include('../detail.ejs', {bookDetail: searchResults[i]}) %>
+
+        <!-- <div class="disp-container">
           <div class="img-container">
             <img src='<%=searchResults[i].image%>'>
           </div>
           <h3><%=searchResults[i].title%></h3>
           <h4><%=searchResults[i].author%></h4>
           <p><%=searchResults[i].description%></p>
-        </div>
+        </div> -->
         <% } %>
       </section>
 
