working on dropdown

--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -1,4 +1,14 @@
 <header>
   <h1>Best Books!</h1>
-  <a href="/">home</a>
+  <div class="navbar">
+    <a href="#home">Home</a>
+    <a href="#news">Search Google Books API</a>
+    <div class="dropdown">
+      <button class="dropbtn">Dropdown
+        <i class="fa fa-caret-down"></i>
+      </button>
+
+    </div>
+  </div>
+
 </header>
