--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -1,14 +1,20 @@
 <header>
   <h1>Best Books!</h1>
-  <div class="navbar">
-    <a href="#home">Home</a>
-    <a href="#news">Search Google Books API</a>
-    <div class="dropdown">
-      <button class="dropbtn">Dropdown
-        <i class="fa fa-caret-down"></i>
-      </button>
-
-    </div>
-  </div>
-
+  
+      <div class="navbar">
+        <div class="dropdown">
+          <button class="dropbtn">
+            <div class="superFlex-div">
+            <img class="hamburger-icon" src="/white-menu-icon-4.jpg">
+            </div>
+          </button>
+          <div class="dropdown-content">
+            <div class="header">
+              <a href="/">Home</a>
+              <a href="/searches/new">Search in the Google Books API</a>
+            </div>   
+          </div>
+        </div>
+      </div> 
+    
 </header>
