--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,13 +1,23 @@
-/* Navbar container */
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  font-family: Arial;
+* {
+  box-sizing: border-box;
 }
 
-/* Links inside the navbar */
+body {
+  margin: 0;
+}
+
+.navbar {
+  
+  overflow: hidden;
+  background-color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: row-reverse;
+  
+}
+
 .navbar a {
-  float: left;
+  /* float: left; */
   font-size: 16px;
   color: white;
   text-align: center;
@@ -15,49 +25,59 @@
   text-decoration: none;
 }
 
-/* The dropdown container */
 .dropdown {
-  float: left;
+  
+  display: block;
   overflow: hidden;
 }
 
-/* Dropdown button */
 .dropdown .dropbtn {
-  font-size: 16px;
+  border: solid 1px red;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: right;
+  font-size: 16px;  
   border: none;
   outline: none;
-  color: white;
+  color: black;
   padding: 14px 16px;
   background-color: inherit;
-  font: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+  font: inherit;
+  margin: 0;
 }
 
-/* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: black;
+  opacity: .5;
 }
 
-/* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: black;
+  opacity: .75;
   width: 100%;
   left: 0;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-/* Mega Menu header, if needed */
-.dropdown-content .header {
-  background: red;
-  padding: 16px;
-  color: white;
+.dropdown:hover .dropdown-content {
+  display: inline-block;
+  border: 1px solid red;
+  font-size: 3em;
 }
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
+.superFlex-div{
+ 
+}
+
+.hamburger-icon {
+  /* border: solid 1px yellow; */
+  display: inline-block;
+
+  /* height: 5vw; */
+  width: 5vw;
+  
 }
 
