--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -14,7 +14,7 @@
     <form action="/searches" method="post">
       <input class="txt-search" type="text" name="search" placeholder="Enter Author or Title" required>
       <fieldset class="search-form">
-        <label class="lab-but" for="title">Title</label>
+        <label class="lab-but title-but" for="title">Title</label>
         <input class="lab-but" type="radio" name="search" value="title" required>
       </fieldset>
       <fieldset class="search-form">
