--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -22,7 +22,7 @@
           <input type="hidden" name="description" value="<%=searchResults[i].description%>"></input>
           <input type="hidden" name="isbn" value="<%=searchResults[i].isbn%>"></input>
           <input type="hidden" name="image_url" value="<%=searchResults[i].image_url%>"></input>
-          <button class="shelf-button" type="submit" name="<%=searchResults[i]%>">Add to Shelf</button>
+          <button class="shelf-button shelf-button-results" type="submit" name="<%=searchResults[i]%>">Add to Shelf</button>
         </form>
         <% } %>
       </section>
