--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -13,6 +13,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: row-reverse;
+  height: 10vw;
   
 }
 
@@ -89,3 +90,38 @@ body {
   
 }
 
+/* Simon's edits start here */
+
+.update-form {
+  margin-top: 1vw;
+  padding: 3vw;
+}
+
+.update-form input, textarea {
+  margin: 2vw;
+  height: 5vw;
+  font-size: 3vw;
+}
+
+.update-form textarea {
+  height: 30vw;
+}
+
+.update-form button {
+  position: absolute;
+  left: calc(50% - 11.5vw);
+  top: 120vw;
+  margin-bottom: 5vw;
+}
+
+.update-form p {
+  text-align: left;
+  padding-left: 3vw;
+  margin-top: 2vw;
+}
+
+.shelf-button-results {
+  margin-left: calc(50% - 14vw);
+  margin-top: 2vw;
+
+}
