--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,4 +1,4 @@
-@media (min-width: 480px){ 
+@media screen and (min-width: 460px) { 
 
 main{
   display:flex;  
@@ -98,10 +98,12 @@ fieldset > input {
   margin: 10vw 10vw 0vw 10vw;
   background-color: #DADADA;
 }
+/* JP EDIT */
 .img-container > img{
   /* display:block; */
   margin: 4vw 0vw 0vw 0vw;
-  width: 12em;
+  width: 28vw;
+  /* JP EDIT */
 }
 .disp-container > * {
   padding:2vw 0vw 0vw 0vw;
@@ -154,5 +156,13 @@ button {
   border-radius: 10px;
   font-size: 2vw;
 }
+/* JP EDIT */
+img {
+  border: 5px solid black;
+  border-radius: 10px;
 }
+/*  */
+
+}
+
 
