--- a/views/pages/update.ejs
+++ b/views/pages/update.ejs
@@ -11,7 +11,7 @@
   <main>
     <form class="update-form" action="/books/update/?_method=PUT" method="POST">
       <p>Title</p>
-      <input type="text" name="ti<label for=""></label>
+      <input type="text" name="title" value="<%= bookData.title %>">
       <p>Author</p>
       <input type="text" name="author" value="<%= bookData.author %>">
       <p>ISBN</p>
